--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body{
 .container{
     display: flex;
     flex-direction: column;
-        width: 100%;
+     width: 100%;
     max-width: 500px;
     min-height: 200px;
     margin: auto;
@@ -38,6 +38,8 @@ input{
     padding: 1rem;
     height: 50px;
     display: block;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 button{
